# customer_support-agent

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: __init__.py  auth.py  chat.py
backend/app/services/: __init__.py  agentcore_client.py  cognito_auth.py
backend/app/utils/: __init__.py  aws.py  security.py
docker/: Dockerfile  requirements.txt
docs/: BACKEND.md  DEPLOYMENT_GUIDE.md  FRONTEND.md
docs/images/: architecture.drawio
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AuthForm.tsx  Avatar.tsx  ChatApp.tsx  ChatInput.tsx  ChatWindow.tsx  ConfirmDialog.tsx  MessageBubble.tsx  Sidebar.tsx  TypingIndicator.tsx  icons.tsx
frontend/lib/: api.ts  auth.ts  conversations.ts  types.ts
iac/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
iac/modules/bedrock_agentcore_evaluation/: main.tf  outputs.tf  variables.tf
src/customer_support_agent/: main.py
src/notebooks/: .env.example  LOCAL_JUPYTER_GUIDE.md  lab-01-create-an-agent.ipynb  lab-02-agentcore-memory.ipynb  lab-03-agentcore-gateway.ipynb  lab-04-agentcore-runtime.ipynb  lab-05-agentcore-evals.ipynb  lab-06-frontend.ipynb  lab-07-cleanup.ipynb
(+54 files in other folders)
